# apps/cli/test/fixtures/openapi.json
@@ -172,6 +172,50 @@
                 "schema": {
                   "type": "object",
                   "properties": {
+                    "accessibility": {
+                      "maxItems": 4096,
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "role": {
+                            "type": "string",
+                            "enum": ["heading", "text", "link"]
+                          },
+                          "text": {
+                            "type": "string",
+                            "maxLength": 262144
+                          },
+                          "url": {
+                            "type": "string",
+                            "maxLength": 8192
+                          },
+                          "x": {
+                            "type": "number"
+                          },
+                          "y": {
+                            "type": "number"
+                          },
+                          "width": {
+                            "type": "number",
+                            "exclusiveMinimum": 0
+                          },
+                          "height": {
+                            "type": "number",
+                            "exclusiveMinimum": 0
+                          }
+                        },
+                        "required": [
+                          "role",
+                          "text",
+                          "x",
+                          "y",
+                          "width",
+                          "height"
+                        ],
+                        "additionalProperties": false
+                      }
+                    },
                     "accessibleText": {
                       "type": "string",
                       "maxLength": 262144
